--- a/main.tex
+++ b/main.tex
@@ -59,11 +59,18 @@
 \begin{document} 
 \maketitle
 
+\begin{abstract}
+This document is targeted to the new \sofa users who want to understand the main principles of this library. More experienced users might learn things too.
+It is a mix of a high-level presentation and a guided tour of the code.
+Comments and suggestions are welcome on the \sofa users mailing list.
+\end{abstract}
+
+
 % \begin{abstract}
 % This is the documentation of the SOFA library. Chapter~\ref{chapter:pba} gives theoretical background on physically-based animation. Chapter~\ref{chapter:as} shows how to implement simulations using \sofa. Chapter~\ref{chapter:es} describes how to integrate new components in \sofa.
 % \end{abstract}
 
-\tableofcontents
+%\tableofcontents
 
 
 \section{Brief overview}
@@ -131,6 +138,8 @@ Mappings are one of the major features of \sofa. They allow us to use different 
 
 The gravity applied to the scene is modeled in the \texttt{Gravity} component near the root. It applies to all the scene, unless locally overloaded by another gravity component inside a branch of the tree.
 
+The abstract component classes are defined in namespace \texttt{core::componentmodel}.
+
 So far, we have discussed the physical model of the scene. 
 To animate it, we need to solve an \textit{Ordinary Differential Equation} (ODE) in time. 
 There are plenty of ODE solvers, and \sofa allows the design and the re-use of a wide variety of them. 
@@ -180,17 +189,136 @@ Mapped models can be designed independently of their parent models, provided tha
 \end{figure}
 
 
-\section{Actions}
+\section{Recursive data processing}
+A typical simulation program, controlled by an application such as the Graphics User Interface (GUI), looks like the one given in figure~\ref{pc:animationloop}.
+\begin{figure}
+\begin{code_cpp}
+init();
+repeat {
+	animate();
+	draw();
+}
+\end{code_cpp}
+\caption{Pseudocode for a standard simulation program.}
+\label{pc:animationloop}
+\end{figure}
+In \sofa, each of the simulation methods is implemented as a recursive graph traversal, \texttt{InitAction}, \texttt{AnimateAction} and \texttt{VisualDrawAction}, respectively. Actions are explained in the next section.
 
-\section{Mappings}
+\subsection{Actions}
+The data structure is processed using visitors called \emph{actions}. 
+They recursively traverse the tree structure and call appropriate virtual methods to a subset of components during the \textit{Top-Down Traversal} (TDT), using virtual method \texttt{Action::processNodeTopDown}, then during the \textit{Bottom-Up Traversal} (BUT), using virtual method \texttt{Action::processNodeBottomUp}. 
 
-\section{ODE Solvers}
+For example, the \texttt{VisualDrawAction} draws the \texttt{VisualModel} components during the TDT, and does nothing during the BUT.
+The \texttt{MechanicalComputeForceAction} accumulates the forces in the appropriate dof vectors during the TDT, then propagates the forces to the parent dofs using the mechanical mappings during the BUT.
+
+When processed by an action $a$, a component can fire another action $b$ through its associated sub-tree. Action $a$ can continue once action $b$ is finished.
+During the TDT, each traversed component decides wether the calling action continues, or prunes the sub-tree associated with the component, or terminates.
+
+The components directly access their sibling components only, except for the mappings.
+A component traversed by an action can indirectly access the data in its associated sub-tree in read-write mode using actions, whereas data in its parent graph is read-only and only partially accessible using method \texttt{getContext}.
+Sibling nodes of the same type can be traversed by actions in arbitrary order.
+
+The actions belong to namespace \texttt{simulation::tree}.
+
+\subsection{ODE Solvers}
+When an \texttt{AnimateAction} traverses a node with an \texttt{OdeSolver} component, 
+the solver takes the control of its associated subtree and prunes the \texttt{AnimateAction}. The solver triggers actions in its associated subtree to perform the standard mechanical computations and integrate time.
+
+The simplest solver is the explicit Euler method, implemented in \texttt{EulerSolver}. The algorithm is shown as pseudocode in figure~\ref{pc:expliciteuler}.
+\begin{figure}
+\begin{code_cpp}
+f = 0
+accumulateForces(f,x,v);
+a = f/M;
+a = filter(a);
+x += v * dt;
+v += a * dt;
+\end{code_cpp}
+\caption{Pseudocode for explicit Euler integration.}
+\label{pc:expliciteuler}
+\end{figure}
+Net force is computed in the first line. 
+In the second line, the acceleration is deduced by dividing the force by the mass.
+Then the accelerations of the fixed points are canceled.
+Finally, position and velocity are updated.
+
+This algorithm can not be directly implemented in \sofa because there are no state vectors x,v,f,a which gather the state values of all the objects in the scene. 
+The solver processes an arbitrary number of objects, of possibly different types, such as particles and rigid bodies. Each physical object carries its state values and auxiliary vectors in its own \texttt{MechanicalObject} component, which is not directly accessible to the solver.
+
+The solvers represent state vectors as \texttt{MultiVector} objects using symbolic identificators implemented in class \texttt{VecId}.
+There are four staticly predefined identificators: \texttt{VecId::position()}, \texttt{VecId::velocity()}, \texttt{VecId::force()} and \texttt{VecId::dx()}.
+A \texttt{Multivector} declared by a solver with a given VecId implicitly refers to all the state vectors in the different \texttt{MechanicalObject} components with the same \texttt{VecId} in the solver's subtree.
+
+Vector operations can be remotely triggered by a solver using an action of a given type, which defines the operator, and given \texttt{VecId}s, which define the operands.
+During the subtree traversal, the operator is applied to the given vectors of the traversed \texttt{MechanicalObject} components.
+
+For example, let us comment the actions performed by the \texttt{EulerSolver} shown in figure~\ref{fig:mixedPendulum}. Its implementation is in method \texttt{component::odesolver::EulerSolver::solve(double)}.
+First, multivectors are declared. 
+
+Then method \texttt{core::componentmodel::behavior::OdeSolver::computeForce(VecId)} is called. It first fires a \texttt{MechanicalResteForceAction} to reset the force vectors of all the \texttt{MechanicalObject} components. It then fires a  \texttt{MechanicalComputeForceAction}. During the TDT, each component derived from \texttt{core::componentmodel::behavior::BaseForceField} computes and accumulates its force in its sibling \texttt{MechanicalObject}. In the example shown in figure~\ref{fig:mixedPendulum}, \texttt{F13} adds its contribution to \texttt{Dof1} and \texttt{Dof2}, then \texttt{F1} and \texttt{M1} add their contributions to \texttt{Dof1}, then \texttt{M2} to \texttt{Dof2}. Then during the BUT, the mechanical mappings sum up the forces of their chid dof to their parent dof, \textit{i.e} the force in \texttt{Dof3} to \texttt{Dof2} through \texttt{M23} in the same example. 
+Note that branches \texttt{deformableBody} and \texttt{rigidBody} can be processed in parallel.
+At the end, the force vector in \texttt{Dof1} contains the net force applied to the particles, and the force vector in \texttt{Dof2} contains the net (six-dimensional) force applied to the rigid body. 
+
+Then method \texttt{OdeSolver::accFromF(VecId,VecId)} fires a \texttt{MechanicalAccFromFAction}. Each component derived from \texttt{core::componentmodel::behavior::BaseMass} computes the accelerations corresponding to the forces in its sibling \texttt{MechanicalObject}.
+
+Then method \texttt{OdeSolver::projectResponse} fires a \texttt{MechanicalApplyConstraintsAction}. All the \texttt{core::componentmodel::behavior::BaseConstraint} components (component \texttt{C} in the example) filter the acceleration vector to maintain some points fixed.
+
+Once the acceleration is computed, multivector methods are used to update the positions and velocities. Here again, actions are used to perform the desired operation in each traversed \texttt{MechanicalObject}.
+
+MultiVector operations are pruned at the first level for efficiency, because the solvers deal with the mechanically independent state variables rather than the mapped variables. 
+Moreover, the mapped coordinates can not be assumed to vary linearly along with their parent variables.
+Applying a \texttt{MechanicalPropagatePositionAndVelocityAction} is thus necessary to update the mapped dofs based on the mechanically independent dofs. 
+This action is automatically performed after time integration, as one can see in the code of method \\ \texttt{MechanicalIntegrationAction::fwdOdeSolver}.
+It is also used by some solvers when auxiliary states are needed, as discussed in section~\ref{sec:statevectors}, in order to update the mapped dofs.
+
+\todo{Call tree of AnimateAction, restricted to sofa::core and sofa::simulation::tree}
+
+\todo{Discuss independent and shared solvers}
+
+\section{State vectors} \label{sec:statevectors}
+The state vectors contain the coordinates, velocites, and other dof-related values such as force and acceleration.
+They are stored in \texttt{MechanicalObject} components. 
+This template class can be instanciated on a variety of types to model particles, rigid bodies or other types of bodies. 
+The template parameter is a \texttt{DataTypes} class which describes data and data containers, such as the the type of coordinates and coordinate derivatives used. 
+These two types are the same in the case of particles, but they are different in the case of rigid bodies.
+
+Each \texttt{MechanicalObject} can represent a set of physical objects of the same type, such as particles. 
+The coordinate state vectors are defined by the \texttt{VecCoord} type, while the derivatives (velocity, acceleration, force, small displacement) are defined by the \texttt{VecDeriv} type.
+Each \texttt{MechanicalObject} stores two arrays of state vectors, one for coordinates and the other for derivatives, as illustrated in figure~\ref{fig:mechanicalobject}.
+\begin{figure}
+ \centering
+ \includegraphics[width=0.45\linewidth]{MechanicalObject1}
+\includegraphics[width=0.45\linewidth]{MechanicalObject2}
+  \caption{A \texttt{MechanicalObject} and a component addressing it. Left: using the default state vectors. Right: using auxiliary state vectors.}
+ \label{fig:mechanicalobject}
+\end{figure}
+
+Auxiliary vectors are necessary for complex solvers, such as \texttt{RungeKutta2Solver}. This solver first performs a half-length Euler step, then evaluates the derivative of this new state (called the \emph{midpoint}), and finally uses this derivative to update the initial state over a whole time step.
+
+To compute the forces at the midpoint while keeping the initial state for further use, we use the auxiliary vectors \texttt{newX} and \texttt{newV}. 
+However, components such as forces and constraints use state vectors, and we have to make sure that they use the right ones.
+To ensure consistency and make the use of auxiliary states transparent, the other components get access to the state vectors using methods \texttt{MechanicalObject::getX()}, \texttt{getV()}, \texttt{getF()} and  \texttt{getDx()}. 
+These methods return pointers to the appropriate vectors, as illustrated in figure~\ref{fig:mechanicalobject}.
+
+Internal  \texttt{MechanicalObject} switches are performed by methods \texttt{MechanicalObject::setX()}, \texttt{setV()}, \texttt{setF()} and  \texttt{setDx()}. 
+These methods are applied by the actions which take multivectors as parameters, before they use other components. See, for example, method\\ \texttt{MechanicalPropagatePositionAndVelocityAction::fwdMechanicalState}.
+
+Note that some constraint-based animation methods require large state vectors and matrices encompassing all the mechanical objects of the scene.
+Such methods are currently under development in \sofa, and they are not yet documented.
+They use actions to count the total number of scalar dofs and to gather them in large state vectors, as well as to build mechanical matrices  such as mass, stiffness, damping and compliance etc.
+
+\section{Mostly used components and methods}
+\subsection{ForceFields}
+\subsection{Constraints}
+\subsection{Masses}
+\subsection{Mappings}
+\subsection{ContextObjects}
 
 \section{Collision detection} \label{sec:collision}
 
-\section{Constraint-based methods}
-
-\section{File format}
+% \section{Constraint-based methods}
+% 
+% \section{File format}
 
 \section{Limitations}
 
