r1390/sofa-dev : minor changes

--- a/slides.tex
+++ b/slides.tex
@@ -294,7 +294,8 @@ Sofa Actions:
 \end{itemize}
 
 \begin{center}
- \includegraphics[width=0.5\linewidth]{slides-fig-ftopdown}
+ \includegraphics[width=0.37\linewidth]{slides-fig-ftopdown}
+ \includegraphics[width=0.57\linewidth]{slides-fig-ftopdown-dot}
  % slides-fig-ftopdown.: 1179648x0 pixel, 0dpi, infxnan cm, bb=
 \end{center}
 
@@ -312,7 +313,8 @@ Sofa Actions:
  \item At the end, the net force applied to the independent (i.e. non-mapped) DOF is computed.
 \end{itemize}
 \begin{center}
- \includegraphics[width=0.5\linewidth]{slides-fig-fbottomup}
+ \includegraphics[width=0.37\linewidth]{slides-fig-fbottomup}
+ \includegraphics[width=0.57\linewidth]{slides-fig-fbottomup-dot}
 \end{center}
 
 \end{frame}
@@ -328,7 +330,8 @@ Sofa Actions:
 \item modularity: uniform or diagonal (or matrix-) masses
 \end{itemize}
 \begin{center}
- \includegraphics[width=0.5\linewidth]{slides-fig-accFromF}
+ \includegraphics[width=0.37\linewidth]{slides-fig-accFromF}
+ \includegraphics[width=0.57\linewidth]{slides-fig-accFromF-dot}
 \end{center}
 
 \end{frame}
@@ -430,7 +433,7 @@ Weaknesses:
 Future work:
 \begin{itemize}
  \item get rid of weaknesses
- \item parallelisation (GPU, clusters)
+ \item parallelisation (clusters, and more GPU)
  \item easy debugging
 \end{itemize}
 
