--- a/introduction/introduction_body.tex
+++ b/introduction/introduction_body.tex
@@ -1,69 +1,3 @@
-\documentclass[a4paper,11pt]{article}
-% LaTeX2Html: setenv TEXINPUTS `pwd`/fig:; latex2html
-
-% ---- graphiques
-\usepackage{graphicx}
-%\graphicspath{./fig} 
-%\usepackage{subfigure}  % several figures in a figure
-%\usepackage{pstricks}
-
-% ---- couleurs
-% \usepackage[dvips]{color}
-% \pagecolor[gray]{1}         % couleur de fond (blanc)
-
-% ---- inclusion de codes
-
-\usepackage{listings}
-\lstset{showstringspaces=false,frame=trBL,frameround=tttt,tabsize=4,basicstyle=\tiny,breaklines=true,breakatwhitespace=true}
-\lstdefinestyle{bash}{language=bash}
-\lstdefinestyle{Perl}{language=Perl}
-\lstdefinestyle{C++}{language=C++}
-\lstdefinestyle{DTD}{language=XML}
-\lstdefinestyle{XML}{language=XML,usekeywordsintag=false,markfirstintag=true}
-\newcommand{\includecode}[2]{\lstinputlisting[style=#1]{#2}}
-%\lstnewenvironment{code}{}{}
-\lstnewenvironment{code_bash}{\lstset{style=bash}}{}
-\lstnewenvironment{code_perl}{\lstset{style=Perl}}{}
-\lstnewenvironment{code_cpp}{\lstset{style=C++}}{}
-\lstnewenvironment{code_dtd}{\lstset{style=DTD}}{}
-\lstnewenvironment{code_xml}{\lstset{style=XML}}{}
-
-\newcommand{\textcode}[1]{{\small {\tt #1}}}
-
-% ---- liens entre le dvi généré et les fichiers sources latex
-%\usepackage[active]{srcltx}
-
-% ---- format de page A4
-	\setlength{\textwidth }{16cm}	% largeur de ligne
-	\setlength{\textheight}{23cm}   % hauteur du texte
-	\setlength{\oddsidemargin}{0cm} % marge pages impaires
-	\setlength{\evensidemargin}{0cm}% marge pages paires
-	\setlength{\topmargin}{0cm} 	
-	\setlength{\headheight}{14pt} 
-	\setlength{\headsep}{0.5cm} 
-
-%\renewcommand{\floatpagefraction}{1}
-
-% Title Page
-\title{Introduction to \sofa}
-\author{The \sofa~team}
-\date{2007}
-% \author{Fran\c{c}ois Faure\\ J\'er\'emie Allard\\ {\small INRIA Rh\^one-Alpes, Grenoble, France}}
-
-% ------ my custom commands
-\newcommand{\sofa}{SOFA }
-\newcommand{\todo}[1]{}
-\newcommand{\eg}{\textit{e.g.} }
-\include{macros_docu}
-
-\begin{document} 
-\maketitle
-
-\begin{abstract}
-This document is targeted to the new \sofa users who want to understand the main principles of this library. More experienced users might learn things too.
-It is a mix of a high-level presentation and a guided tour of the code.
-Comments and suggestions are welcome on the \sofa users mailing list.
-\end{abstract}
 
 
 % \begin{abstract}
@@ -353,11 +287,11 @@ The default collision manager of Sofa circumvents this problem by dynamically ga
 \section{Code of the examples}
 \subsection{The hybrid pendulum}\label{cpp:hybrid}
 This is the code of the example commented in section~\ref{sec:commentedExample}.
-\includecode{C++}{../applications/tutorials/mixedPendulum/Main.cpp}
+\includecode{C++}{../../applications/tutorials/mixedPendulum/Main.cpp}
 
 \subsection{A liver}\label{xml:liver}
 This is the XML code of the liver discussed in section~\ref{sec:multimodel} page~\pageref{bla:liver}.
-\includecode{XML}{../scenes/liver.scn}
+\includecode{XML}{../../scenes/liver.scn}
 
 % \include{sofaMechanical}
 % 
@@ -374,4 +308,3 @@ This is the XML code of the liver discussed in section~\ref{sec:multimodel} page
 
 
 
-\end{document}          
