r1476/sofa-dev : reorg doc

--- a/introduction/introduction.tex
+++ b/introduction/introduction.tex
@@ -1,4 +1,5 @@
 \documentclass[a4paper,11pt]{article}
+\include{macros_docu}
 % LaTeX2Html: setenv TEXINPUTS `pwd`/fig:; latex2html
 
 % ---- graphiques
@@ -51,9 +52,6 @@
 % \author{Fran\c{c}ois Faure\\ J\'er\'emie Allard\\ {\small INRIA Rh\^one-Alpes, Grenoble, France}}
 
 % ------ my custom commands
-\newcommand{\sofa}{SOFA }
-\newcommand{\todo}[1]{}
-\newcommand{\eg}{\textit{e.g.} }
 %\include{macros_docu}
 
 \begin{document} 
