--- a/macros_docu.tex
+++ b/macros_docu.tex
@@ -1,3 +1,8 @@
+\newcommand{\sofa}{SOFA }
+\newcommand{\todo}[1]{}
+\newcommand{\eg}{\textit{e.g.} }
+
+
 % macros mathematiques
 \newcommand{\ma}[1]{\ensuremath{\mathbf {#1}}}
 \newcommand{\ve}[1]{\ensuremath{\mathbf {#1}}}
