--- a/introduction-old/extendingSofa.tex
+++ b/introduction-old/extendingSofa.tex
@@ -396,7 +396,7 @@ The same mapping can also be used to attach a collision model:
 <Scene dt="0.005" showBehaviorModels="1" showCollisionModels="1" showMappings="1" showForceFields="1">
 	<CollisionPipeline>
 		<CollisionDetection name="N2" type="BruteForce" />
-		<Contact name="Response" contact="default" />
+		<Contact name="Response" response="default" />
 		<CollisionGroup name="Group" />
 	</CollisionPipeline>
 	<Group>
